# warehouse

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  test.yml
app/: health.py  main.py  metrics.py  models.py  service.py
app/agents/: __init__.py  cache_agent.py  db_agent.py  kafka_agent.py
app/api/: __init__.py  base.py  movements.py  warehouses.py
kafka_requests/: send_arrival.py  send_departure.py
tests/: test_api.py  test_api_components.py  test_cache_agent.py  test_db_agent.py  test_kafka_agent.py  test_service.py
