[project]
name = "warehouse"
version = "0.1.0"
description = "Test work warehouse"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.101.0",
    "uvicorn==0.23.2",
    "asyncpg==0.28.0",
    "kafka-python==2.0.2",
    "aiokafka==0.7.2",
    "pydantic==2.1.1",
    "prometheus-client==0.17.1",
    "prometheus-fastapi-instrumentator==6.1.0",
    "starlette-exporter==0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.24.1",
    "ruff==0.11.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_metadata"

[tool.setuptools]
packages = ["app", "app.agents", "app.api"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "UP032",
    "SIM117"
]

[tool.ruff.lint.per-file-ignores]
"api/app/tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.flake8-quotes]
avoid-escape = false
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
